--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "seed": "node seed.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
-    "mongoose": "^8.9.0",
-    "cors": "^2.8.5"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.9.0"
   }
 }
